Fixes to Docker config
- Fix Docker config so Xdebug logging works (still doesn't attach to Visual Studio Code for some reason, but log file is accessible with stack trace info)
- Fix permissions issues with uploads folder
- Minor tweaks to comments in Docker configs
- Update README with info on plugin features and accessing logs

--- a/.gitignore
+++ b/.gitignore
@@ -37,15 +37,16 @@
 
 # All plugins
 #
-# Note: If you wish to whitelist plugins,
-# uncomment the next line
+# Ignore all plugins except the wc-extension plugin.
+# Add any additional plugins you want to whitelist below.
 /wordpress/wp-content/plugins/*
 !/wordpress/wp-content/plugins/wc-extension/
 
 # All themes
 #
 # Note: If you wish to whitelist themes,
-# uncomment the next line
-#/wp-content/themes
+# uncomment the next line and add exclusions below.
+#/wp-content/themes/*
 
+# Env configuration
 /.env
