--- a/xdebug.ini
+++ b/xdebug.ini
@@ -1,17 +1,18 @@
 [xdebug]
-; This enables Xdebug's debugging features
+; Tells PHP to load the Xdebug extension.
+zend_extension=xdebug
+
+; Enables the step debugger feature.
 xdebug.mode=debug
 
-; This tells Xdebug to attempt a connection for every request
+; Tells Xdebug to initiate a connection for every single request.
 xdebug.start_with_request=yes
 
-; This is the special DNS name that Docker provides for containers
-; to connect back to the host machine (your computer).
+; Use the docker internal DNS name to allow communication with the host machine.
 xdebug.client_host=host.docker.internal
 
-; This is the standard port for Xdebug
+; The standard port VS Code listens on.
 xdebug.client_port=9003
 
-; This logs Xdebug's connection attempts. It's very useful for troubleshooting.
-; The log file will appear inside the wordpress_app container at /tmp/xdebug.log
+; The path for the diagnostic log file inside the container.
 xdebug.log=/tmp/xdebug.log
